<resources>
    <string name="app_name">HMS</string>
    <string name="Home">Home</string>
    <string name="Hotel">Add Hotel</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="Profile">Profile</string>
    <string name="Feedback">Feedback</string>
    <string name="Bookings">Bookings</string>
    <string name="Hotels">Hotels</string>
    <string name="ViewHotel">View Hotel</string>
</resources>
