<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/Home"
            android:icon="@drawable/home"
            />
        <item
            android:id="@+id/hotel"
            android:title="@string/Hotel"
            android:icon="@drawable/product"
            />
        <item
            android:id="@+id/feeback"
            android:title="@string/Bookings"
            android:icon="@drawable/order"/>



    </group>

    <item android:title="Profile">
        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/login"
                    android:title="@string/Login"
                    android:icon="@drawable/login"
                    />

                <item
                    android:id="@+id/profile"
                    android:title="@string/Profile"
                    android:icon="@drawable/proifle"
                    />

                <item
                    android:id="@+id/logout"
                    android:title="@string/Logout"
                    android:icon="@drawable/logout"
                    />

            </group>
        </menu>

    </item>
</menu>